--- a/.github/workflows/package-project.yml
+++ b/.github/workflows/package-project.yml
@@ -143,6 +143,7 @@ jobs:
         elif [ "${{ github.event.action }}" == "package-release" ]
         then
           export USE_HEAD=false
+          git remote update origin
           export REF=`git tag --sort=committerdate --list 'v[0-9]*'|tail -1`
           git checkout $REF
           git submodule sync && git submodule update
