--- a/.github/workflows/package-project.yml
+++ b/.github/workflows/package-project.yml
@@ -99,8 +99,14 @@ jobs:
       run: |
         set -x
         export VERSION=`echo ${{ github.ref }} | sed -e 's@refs/tags/v@@'`
-        echo "REJECTION=PROJECT_VERSION in CMakeLists.txt does not match tag" >> $GITHUB_ENV
-        grep -q "set(PROJECT_VERSION ${VERSION})" CMakeLists.txt
+        if [ -f package.xml ]
+        then
+          echo "REJECTION=version in package.xml does not match tag" >> $GITHUB_ENV
+          grep -q "<version>${VERSION}</version>" package.xml
+        else
+          echo "REJECTION=PROJECT_VERSION in CMakeLists.txt does not match tag" >> $GITHUB_ENV
+          grep -q "set(PROJECT_VERSION ${VERSION})" CMakeLists.txt
+        endif
         if [ -f debian/changelog ]
         then
           PKG_NAME=`grep "^Source:" debian/control|sed -e 's/Source: //'`
