--- a/build-catkin-project/action.yml
+++ b/build-catkin-project/action.yml
@@ -74,5 +74,16 @@ runs:
         set +x
         . devel/setup.bash
         set -x
-        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }}  ${{ inputs.cmake-args }}
+        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} ${{ inputs.cmake-args }}
+      shell: bash
+    - name: Run test
+      run: |
+        set -e
+        set -x
+        cd ${GITHUB_WORKSPACE}/catkin_ws
+        set +x
+        . devel/setup.bash
+        set -x
+        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} --catkin-make-args run_tests ${{ inputs.cmake-args }}
+        catkin_test_results --verbose --all build
       shell: bash
