--- a/build-catkin-project/action.yml
+++ b/build-catkin-project/action.yml
@@ -17,6 +17,11 @@ inputs:
     required: true
     type: string
     default: ''
+  catkin-packages:
+    description: "Target catkin packages"
+    required: false
+    type: string
+    default: ''
 runs:
   using: "composite"
   steps:
@@ -74,7 +79,7 @@ runs:
         set +x
         . devel/setup.bash
         set -x
-        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} ${{ inputs.cmake-args }}
+        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} ${{ inputs.cmake-args }} ${{ inputs.catkin-packages }}
       shell: bash
     - name: Run test
       run: |
@@ -84,6 +89,6 @@ runs:
         set +x
         . devel/setup.bash
         set -x
-        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} --catkin-make-args run_tests ${{ inputs.cmake-args }}
+        catkin build --limit-status-rate 0.1 -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} --catkin-make-args run_tests ${{ inputs.cmake-args }} ${{ inputs.catkin-packages }}
         catkin_test_results --verbose --all build
       shell: bash
