--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -22,7 +22,7 @@ jobs:
             arch: i386
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Build image
       run: |
         set -x
@@ -80,5 +80,5 @@ jobs:
         fi
         if [ "${{ matrix.dist }}" = "jammy" ]
         then
-          build-image "" "humble"
+          build-image "" "iron"
         fi
