--- a/docker/Dockerfile.ros2
+++ b/docker/Dockerfile.ros2
@@ -2,4 +2,6 @@ FROM gergondet/pbuilder:@DIST@-@ARCH@
 
 RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
-RUN apt-get update -qq && apt-get install -qq ros-@ROS_DISTRO@-ros-base
+RUN apt-get update -qq && apt-get install -qq ros-@ROS_DISTRO@-ros-base locales && locale-gen en_US en_US.UTF-8 && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+
+ENV LANG=en_US.UTF-8
