--- a/docker/Dockerfile.ros
+++ b/docker/Dockerfile.ros
@@ -1,5 +1,5 @@
 FROM gergondet/pbuilder:@DIST@-@ARCH@
 
 RUN echo 'deb http://packages.ros.org/ros/ubuntu @DIST@ main' > /etc/apt/sources.list.d/ros-latest.list && \
-    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
+    curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
 RUN apt-get update -qq && apt-get install -qq ros-@ROS_DISTRO@-ros-base
