--- a/build-colcon-project/action.yml
+++ b/build-colcon-project/action.yml
@@ -2,37 +2,37 @@
 
 # On call it will:
 # - if ROS_DISTRO is not set call install-dependencies to set it up
-# - create a catkin workspace in ${GITHUB_WORKSPACE}/${{ inputs.workspace-dir }}
+# - create a colcon workspace in ${GITHUB_WORKSPACE}/${{ inputs.workspace-dir }}
 # - clone the project in the workspace
 # - run rosdep
-# - run catkin build
-# - run catkin test (optionally)
+# - run colcon build
+# - run colcon test (optionally)
 
-name: Build catkin project
-description: Build a catkin project
+name: Build colcon project
+description: Build a colcon project
 inputs:
   build-type:
     description: "CMAKE_BUILD_TYPE for the project"
-    required: false
+    required: true
     default: 'RelWithDebInfo'
   cmake-args:
     description: "Extra cmake arguments"
     required: false
     default: ''
-  catkin-build-args:
-    description: "Extra catkin arguments for build"
+  colcon-build-args:
+    description: "Extra colcon arguments for build"
     required: false
     default: ''
-  catkin-test-args:
-    description: "Extra catkin arguments for test"
+  colcon-test-args:
+    description: "Extra colcon arguments for test"
     required: false
     default: ''
   build-packages:
-    description: "Catkin packages to be built (default is all packages)"
+    description: "colcon packages to be built (default is all packages)"
     required: false
     default: ''
   test-packages:
-    description: "Catkin package to be tested (default is all packages)"
+    description: "colcon package to be tested (default is all packages)"
     required: false
     default: ''
   skip-test:
@@ -42,7 +42,7 @@ inputs:
   workspace-dir:
     description: "Workspace location (in ${GITHUB_WORKSPACE})"
     required: false
-    default: 'catkin_ws'
+    default: 'colcon_ws'
 runs:
   using: "composite"
   steps:
@@ -57,8 +57,6 @@ runs:
       run: |
         mkdir -p ${GITHUB_WORKSPACE}/${{ inputs.workspace-dir }}/src
         cd ${GITHUB_WORKSPACE}/${{ inputs.workspace-dir }}
-        catkin init
-        catkin build --limit-status-rate 0.1
       shell: bash
     - name: Checkout repository code
       uses: actions/checkout@v3
@@ -82,9 +80,6 @@ runs:
         set -e
         set -x
         cd ${GITHUB_WORKSPACE}/${{ inputs.workspace-dir }}
-        set +x
-        . devel/setup.bash
-        set -x
         if [ ! -f /etc/ros/rosdep/sources.list.d/20-default.list ]
         then
           sudo rosdep init
@@ -92,7 +87,7 @@ runs:
         rosdep update
         rosdep install -y -r --from-paths src --ignore-src
       shell: bash
-    - name: catkin build
+    - name: colcon build
       run: |
         set -e
         set -x
@@ -100,7 +95,12 @@ runs:
         set +x
         . devel/setup.bash
         set -x
-        catkin build ${{ inputs.build-packages }} --limit-status-rate 0.1 ${{ inputs.catkin-build-args }} --cmake-args -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} ${{ inputs.cmake-args }}
+        COLCON_OPTIONS="--merge-install"
+        if [ "${{ inputs.build-packages }}" != "" ]
+        then
+          COLCON_OPTIONS="${COLCON_OPTIONS} --packages-select ${{ inputs.build-packages }}"
+        fi
+        colcon build ${COLCON_OPTIONS} ${{ inputs.colcon-build-args }} --cmake-args -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} ${{ inputs.cmake-args }}
       shell: bash
     - name: Run test
       if: ${{ inputs.skip-test == false || inputs.skip-test == 'false' }}
@@ -109,8 +109,13 @@ runs:
         set -x
         cd ${GITHUB_WORKSPACE}/${{ inputs.workspace-dir }}
         set +x
-        . devel/setup.bash
+        . install/setup.bash
         set -x
-        catkin build ${{ inputs.test-packages }} --limit-status-rate 0.1 ${{ inputs.catkin-test-args }} --cmake-args -DCMAKE_BUILD_TYPE=${{ inputs.build-type }} ${{ inputs.cmake-args }} --catkin-make-args run_tests
-        catkin_test_results --verbose --all build
+        COLCON_OPTIONS="--merge-install "
+        if [ "${{ inputs.test-packages }}" != "" ]
+        then
+          COLCON_OPTIONS="${COLCON_OPTIONS} --packages-select ${{ inputs.test-packages }}"
+        fi
+        colcon test ${COLCON_OPTIONS} ${{ inputs.colcon-test-args }}
+        colcon test-result --verbose --all
       shell: bash
