--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dist: [xenial, bionic, focal, jammy, noble]
+        dist: [xenial, bionic, focal, jammy, noble, oracular]
         arch: [i386, amd64]
         exclude:
           # No more i386 support since focal
@@ -21,6 +21,8 @@ jobs:
           - dist: jammy
             arch: i386
           - dist: noble
+            arch: i386
+          - dist: oracular
             arch: i386
     runs-on: ubuntu-20.04
     steps:
