--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -84,5 +84,5 @@ jobs:
         fi
         if [ "${{ matrix.dist }}" = "jammy" ]
         then
-          build-image "" "iron"
+          build-image "" "humble"
         fi
