Build a noble + jazzy image

--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -86,3 +86,7 @@ jobs:
         then
           build-image "" "humble"
         fi
+        if [ "${{ matrix.dist }}" = "noble" ]
+        then
+          build-image "" "jazzy"
+        fi
