--- a/.github/workflows/superbuild-devcontainer.yml
+++ b/.github/workflows/superbuild-devcontainer.yml
@@ -30,6 +30,11 @@ on:
         required: false
         default: true
 
+      build-standalone-devel:
+        type: boolean
+        required: false
+        default: true
+
       build-devcontainer:
         type: boolean
         required: false
@@ -205,6 +210,40 @@ jobs:
       shell: bash
       run: |
         docker push $CONTAINER_FULL_NAME
+
+    - name: Free Disk Space (Ubuntu)
+      if: ${{ inputs.free-disk-space && inputs.build-devcontainer}}
+      uses: jlumbroso/free-disk-space@main
+
+    - name: 'Docker: Build Standalone Devel'
+      if: ${{ inputs.build-standalone-devel }}
+      env:
+        CONTAINER_TAG: ${{ matrix.os }}-standalone-devel-${{ env.RELEASE_TAG }}
+      shell: bash
+      run: |
+        echo "::group::Prepare docker"
+
+        CONTAINER_FULL_NAME_DEVEL=$CONTAINER_NAME:$CONTAINER_TAG
+        echo "CONTAINER_FULL_NAME_DEVEL=$CONTAINER_FULL_NAME_DEVEL" >> $GITHUB_ENV
+        echo "::endgroup::"
+
+        echo "::group::Print Dockerfile"
+        cat .github/devcontainer/Dockerfile
+        echo "::endgroup::"
+
+        echo "::group::Build Dockerfile"
+        docker build . -f .github/devcontainer/Dockerfile $SSH_OPT --tag $CONTAINER_FULL_NAME_DEVEL --build-arg CMAKE_PRESET=$CMAKE_PRESET --build-arg BUILD_VERSION=standalone-devel --build-arg UBUNTU_VERSION="${{ matrix.os }}" $BUILD_ARGS
+        echo "::endgroup::"
+
+        echo "::group::Check docker image size"
+        docker inspect -f "{{ .Size }}" $CONTAINER_FULL_NAME_DEVEL | numfmt --to=si
+        echo "::endgroup::"
+
+    - name: 'Docker: Push Standalone Devel (public repositories)'
+      if: ${{ inputs.build-standalone-devel && inputs.push }}
+      shell: bash
+      run: |
+        docker push $CONTAINER_FULL_NAME_DEVEL
 
     - name: Free Disk Space (Ubuntu)
       if: ${{ inputs.free-disk-space && inputs.build-devcontainer}}
