workflows(devcontainer): optimize multi-stage build

--- a/.github/workflows/superbuild-devcontainer.yml
+++ b/.github/workflows/superbuild-devcontainer.yml
@@ -1,3 +1,16 @@
+# This reusable workflow builds and publishes Docker images for mc-rtc-superbuild in three variants:
+#
+# 1. standalone-release: Minimal production image (~2-4GB) with install files + catkin workspaces
+#    - Use case: Running controllers/simulators in production environments
+#
+# 2. standalone-devel: Full development image (~10-20GB) with sources + build + install + ccache
+#    - Use case: Complete reproducible development environment with all build artifacts
+#
+# 3. devcontainer: VS Code devcontainer image (~1-2GB) with system packages + ccache
+#    - Use case: Development with mounted source code and fast incremental builds
+#
+# The workflow optimizes build times by sharing the expensive build stage between standalone variants.
+
 name: mc-rtc-superbuild packaging with Docker/Devcontainer
 
 on:
@@ -25,7 +38,7 @@ on:
         default: ''
         description: 'Space-separated list of build-arg for docker. Ex "BUILD_VERSION=standalone KEEP_INSTALL=false"'
 
-      build-standalone:
+      build-standalone-release:
         type: boolean
         required: false
         default: true
@@ -67,7 +80,6 @@ on:
         required: false
         default: true
         description: "Whether to push to the container-repository"
-
 
     secrets:
       SSH_KEY:
@@ -169,20 +181,19 @@ jobs:
         echo "CMAKE_PRESET=$CMAKE_PRESET" >> $GITHUB_ENV
         echo "UBUNTU_VERSION=${{ matrix.os }}" >> $GITHUB_ENV
 
-    - name: 'Docker: Build Standalone Release'
-      if: ${{ inputs.build-standalone }}
+    - name: 'Docker: Build Standalone Images (Release + Devel)'
+      if: ${{ inputs.build-standalone-release || inputs.build-standalone-devel }}
       env:
-        CONTAINER_TAG: ${{ matrix.os }}-standalone-${{ env.RELEASE_TAG }}
+        CONTAINER_TAG_RELEASE: ${{ matrix.os }}-standalone-release-${{ env.RELEASE_TAG }}
+        CONTAINER_TAG_DEVEL: ${{ matrix.os }}-standalone-devel-${{ env.RELEASE_TAG }}
       shell: bash
       run: |
         echo "::group::Prepare docker"
 
-        CONTAINER_FULL_NAME=$CONTAINER_NAME:$CONTAINER_TAG
-        echo "CONTAINER_FULL_NAME=$CONTAINER_FULL_NAME" >> $GITHUB_ENV
-        echo "::endgroup::"
-
-        echo "::group::Print Dockerfile"
-        cat .github/devcontainer/Dockerfile
+        CONTAINER_FULL_NAME_RELEASE=$CONTAINER_NAME:$CONTAINER_TAG_RELEASE
+        CONTAINER_FULL_NAME_DEVEL=$CONTAINER_NAME:$CONTAINER_TAG_DEVEL
+        echo "CONTAINER_FULL_NAME_RELEASE=$CONTAINER_FULL_NAME_RELEASE" >> $GITHUB_ENV
+        echo "CONTAINER_FULL_NAME_DEVEL=$CONTAINER_FULL_NAME_DEVEL" >> $GITHUB_ENV
         echo "::endgroup::"
 
         echo "::group::Configuring build-args"
@@ -194,56 +205,51 @@ jobs:
           BUILD_ARGS="$BUILD_ARGS --build-arg $arg"
         done
         echo "Extra build args: $BUILD_ARGS"
-        echo "BUILD_ARGS=$BUILD_ARGS" >> $GITHUB_ENV
         echo "::endgroup::"
 
-        echo "::group::Build Dockerfile"
-        docker build . -f .github/devcontainer/Dockerfile $SSH_OPT --tag $CONTAINER_FULL_NAME --build-arg CMAKE_PRESET=$CMAKE_PRESET --build-arg BUILD_VERSION=standalone --build-arg UBUNTU_VERSION="${{ matrix.os }}" $BUILD_ARGS
+        echo "::group::Build Standalone Release Image"
+        if [ "${{ inputs.build-standalone-release }}" = "true" ]; then
+          docker build . -f .github/devcontainer/Dockerfile $SSH_OPT \
+            --tag $CONTAINER_FULL_NAME_RELEASE \
+            --target standalone-release \
+            --build-arg CMAKE_PRESET=$CMAKE_PRESET \
+            --build-arg BUILD_VERSION=standalone \
+            --build-arg UBUNTU_VERSION="${{ matrix.os }}" \
+            $BUILD_ARGS
+
+          echo "Standalone Release image size:"
+          docker inspect -f "{{ .Size }}" $CONTAINER_FULL_NAME_RELEASE | numfmt --to=si
+        fi
         echo "::endgroup::"
 
-        echo "::group::Check docker image size"
-        docker inspect -f "{{ .Size }}" $CONTAINER_FULL_NAME | numfmt --to=si
+        echo "::group::Build Standalone Devel Image"
+        if [ "${{ inputs.build-standalone-devel }}" = "true" ]; then
+          docker build . -f .github/devcontainer/Dockerfile $SSH_OPT \
+            --tag $CONTAINER_FULL_NAME_DEVEL \
+            --target standalone-devel \
+            --build-arg CMAKE_PRESET=$CMAKE_PRESET \
+            --build-arg BUILD_VERSION=standalone \
+            --build-arg UBUNTU_VERSION="${{ matrix.os }}" \
+            $BUILD_ARGS
+
+          echo "Standalone Devel image size:"
+          docker inspect -f "{{ .Size }}" $CONTAINER_FULL_NAME_DEVEL | numfmt --to=si
+        fi
         echo "::endgroup::"
 
-    - name: 'Docker: Push Standalone Release (public repositories)'
-      if: ${{ inputs.build-standalone && inputs.push }}
+    - name: 'Docker: Push Standalone Images'
+      if: ${{ (inputs.build-standalone-release || inputs.build-standalone-devel) && inputs.push }}
       shell: bash
       run: |
-        docker push $CONTAINER_FULL_NAME
+        if [ "${{ inputs.build-standalone-release }}" = "true" ]; then
+          echo "Pushing standalone-release image..."
+          docker push $CONTAINER_FULL_NAME_RELEASE
+        fi
 
-    - name: Free Disk Space (Ubuntu)
-      if: ${{ inputs.free-disk-space && inputs.build-devcontainer}}
-      uses: jlumbroso/free-disk-space@main
-
-    - name: 'Docker: Build Standalone Devel'
-      if: ${{ inputs.build-standalone-devel }}
-      env:
-        CONTAINER_TAG: ${{ matrix.os }}-standalone-devel-${{ env.RELEASE_TAG }}
-      shell: bash
-      run: |
-        echo "::group::Prepare docker"
-
-        CONTAINER_FULL_NAME_DEVEL=$CONTAINER_NAME:$CONTAINER_TAG
-        echo "CONTAINER_FULL_NAME_DEVEL=$CONTAINER_FULL_NAME_DEVEL" >> $GITHUB_ENV
-        echo "::endgroup::"
-
-        echo "::group::Print Dockerfile"
-        cat .github/devcontainer/Dockerfile
-        echo "::endgroup::"
-
-        echo "::group::Build Dockerfile"
-        docker build . -f .github/devcontainer/Dockerfile $SSH_OPT --tag $CONTAINER_FULL_NAME_DEVEL --build-arg CMAKE_PRESET=$CMAKE_PRESET --build-arg BUILD_VERSION=standalone-devel --build-arg UBUNTU_VERSION="${{ matrix.os }}" $BUILD_ARGS
-        echo "::endgroup::"
-
-        echo "::group::Check docker image size"
-        docker inspect -f "{{ .Size }}" $CONTAINER_FULL_NAME_DEVEL | numfmt --to=si
-        echo "::endgroup::"
-
-    - name: 'Docker: Push Standalone Devel (public repositories)'
-      if: ${{ inputs.build-standalone-devel && inputs.push }}
-      shell: bash
-      run: |
-        docker push $CONTAINER_FULL_NAME_DEVEL
+        if [ "${{ inputs.build-standalone-devel }}" = "true" ]; then
+          echo "Pushing standalone-devel image..."
+          docker push $CONTAINER_FULL_NAME_DEVEL
+        fi
 
     - name: Free Disk Space (Ubuntu)
       if: ${{ inputs.free-disk-space && inputs.build-devcontainer}}
@@ -270,27 +276,32 @@ jobs:
         echo "DEVCONTAINER_NAME=${{ inputs.container-repository }}" >> $GITHUB_ENV
         echo "DEVCONTAINER_TAG=${{ matrix.os }}-devcontainer-${{ env.RELEASE_TAG }}" >> $GITHUB_ENV
         echo "DEVCONTAINER_FULL_NAME=$CONTAINER_NAME:${{ matrix.os }}-devcontainer-${{ env.RELEASE_TAG }}" >> $GITHUB_ENV
-        echo "BUILD_VERSION=devcontainer" >> $GITHUB_ENV
-        if [ "${{ env.SSH_KEY }}" != '' ]; then
-          SSH_OPT="--ssh=default"
-          echo "SSH_OPT=$SSH_OPT"
-          echo "SSH_OPT=$SSH_OPT" >> $GITHUB_ENV;
-        fi
 
-    - name: Build and push dev container image
-      if: ${{ inputs.build-devcontainer }}
-      uses: devcontainers/ci@v0.3
-      with:
-        imageName: ${{ env.DEVCONTAINER_NAME}}
-        imageTag: ${{ env.DEVCONTAINER_TAG }}
-        subFolder: .github/devcontainer/${{ matrix.os }}
-        configFile: .github/devcontainer/${{ matrix.os }}/devcontainer.json
-        push: ${{ inputs.push && 'always' || 'never' }}
-
-    - name: 'Docker: Check devcontainer size'
+    - name: 'Docker: Build Devcontainer Image'
       if: ${{ inputs.build-devcontainer }}
       shell: bash
       run: |
-        docker images
-        docker ps
+        echo "::group::Build Devcontainer Image"
+        docker build . -f .github/devcontainer/Dockerfile $SSH_OPT \
+          --tag $DEVCONTAINER_FULL_NAME \
+          --target devcontainer \
+          --build-arg CMAKE_PRESET=$CMAKE_PRESET \
+          --build-arg BUILD_VERSION=devcontainer \
+          --build-arg UBUNTU_VERSION="${{ matrix.os }}"
+
+        echo "Devcontainer image size:"
         docker inspect -f "{{ .Size }}" $DEVCONTAINER_FULL_NAME | numfmt --to=si
+        echo "::endgroup::"
+
+    - name: 'Docker: Push Devcontainer Image'
+      if: ${{ inputs.build-devcontainer && inputs.push }}
+      shell: bash
+      run: |
+        echo "Pushing devcontainer image..."
+        docker push $DEVCONTAINER_FULL_NAME
+
+    - name: 'Docker: Check all image sizes'
+      shell: bash
+      run: |
+        echo "All built images:"
+        docker images
